# SynapSpace-AG2-Playground

./: .gitignore  README.md  compose.yaml  package.json
apps/agents/: .env.example  Dockerfile  pyproject.toml
apps/agents/synapspace_agents/: __init__.py  ag2_runtime.py  ag_ui_runtime.py  api.py  context_memory.py  models.py  orchestrator.py
apps/web/: .env.example  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/ag-ui/: route.ts
apps/web/app/api/run/: route.ts
apps/web/lib/: types.ts
