[project]
name = "synapspace-ag2-agents"
version = "0.1.0"
description = "AG2-ready multi-agent service for SynapSpace Playground"
requires-python = ">=3.10,<3.14"
dependencies = [
  "ag2[ag-ui,openai]>=0.9.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
